# excrypt

./: .gitignore  README.md  pyproject.toml
excrypt/: __init__.py  binance.py  bitfinex.py  bybit.py  client.py  dataclasses.py  exceptions.py  exchange.py  kucoin.py
tools/: generate_binance_quote_assets.py
